Fixes Temperature and Icon css spacing

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -24,6 +24,7 @@
 .Weather img{
     height:64px;
     width: 64px;
+    font-size: 64px;
     margin-right: 10px;
     display: inline-block;
 }
@@ -36,7 +37,7 @@ font-weight: 400;
 
 }
 .Weather .unit{
-    color: rgb(33,33,33);
+color: rgb(33,33,33);
 font-size: 16px;
 font-weight: 400;
 position: relative;
@@ -45,3 +46,11 @@ top: -34px;
 margin-left: 5px;
 
 }
+
+.Weather .float-left {
+    float: left;
+  }
+
+  .col-6 {
+      display: block;
+  }
